--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "nuxt": "^3.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "@heroicons/vue": "^2.0.14",
+    "@splidejs/vue-splide": "^0.6.12"
   }
 }
